Add TA reports for AY 21/22 Sem 1

--- a/index.html
+++ b/index.html
@@ -237,7 +237,9 @@ scripts:
 <li>
 <div class="header">CS2106 Introduction to Operating Systems</div>
 <div class="date">AY 21/22 Sem 1 (August &ndash; November 2021)</div>
-<div class="content">This is the current semester.</div>
+<div class="link"><a href="teaching/teacher_report_2122_sem1_CS2106_lab.pdf">Teacher Report</a> (overall score: 4.2/5)</div>
+<div class="link"><a href="teaching/text_analytics_report_2122_sem1.pdf">Aggregated Text Analytics Report</a></div>
+<div class="content">Conducted lab sessions for 2 classes (39 students in total); designed, implemented, and graded one of the assignments.  Sessions were conducted online due to the pandemic.    I worked with Ye Jiadong to teach this class.</div>
 </li>
 
 <li>
