Add reviews and cheatsheets for AY 21/22 Sem 1

--- a/index.html
+++ b/index.html
@@ -415,11 +415,11 @@ scripts:
 
 <p class="modulegroup">AY 21/22 Sem 1</p>
 <ul>
-<li>CS5234 Algorithms at Scale</li>
-<li>GEH1030 Science of Music</li>
-<li>MA3205 Set Theory</li>
-<li>MA3238 Stochastic Processes I</li>
-<li>MA4235 Topics in Graph Theory</li>
+<li>CS5234 Algorithms at Scale | <a href="nus/CS5234.html">Review</a> | <a href="nus/CS5234 Reference.pdf">Cheatsheet</a></li>
+<li>GEH1030 Science of Music | <a href="nus/GEH1030.html">Review</a> | <a href="nus/GEH1030 Composition.mid">MIDI Music Composition</a></li>
+<li>MA3205 Set Theory | <a href="nus/MA3205 Reference.pdf">Cheatsheet</a></li>
+<li>MA3238 Stochastic Processes I | <a href="nus/MA3238 Reference.pdf">Cheatsheet</a></li>
+<li>MA4235 Topics in Graph Theory | <a href="nus/MA4235 Reference.pdf">Cheatsheet</a></li>
 </ul>
 
 <p><span class="keyname">About DMC1401CS Design Your Own Module (DYOM):</span>  Students may propose their own module (called a DYOM), which counts as a 4MC CS/CU unrestricted elective.  There is generally no restriction on the kind of topic allowed, as long as they can find a supervisor (an NUS professor) and a sufficient number of interested students.  At the point of writing, a minimum of ten students is required (though this may be negotiable), and each student may take up to two DYOMs in total.  For information about starting and running a DYOM in general, see <a href="https://www.nus.edu.sg/registrar/academic-information-policies/undergraduate-students/design-your-own-module">this page</a>.  For SoC-specific guidance, see <a href="https://github.com/nusdistsys/NUS_DYOM">this page</a> (maintained by students).  Some people in <a href="https://www.nushackers.org/">NUS Hackers</a> might also be able to provide guidance.</p>
