Add IEEE publication links

--- a/index.html
+++ b/index.html
@@ -399,7 +399,7 @@ scripts:
 <li>CS4212 Compiler Design | <a href="nus/CS4212.html">Review</a> | <a href="https://github.com/btzy/CS4212-compiler">Github repository</a></li>
 <li>CS4232 Theory of Computation | <a href="nus/CS4232.html">Review</a> | <a href="nus/CS4232 Reference.pdf">Cheatsheet</a></li>
 <li>MA4270 Data Modelling and Computation | <a href="nus/MA4270.html">Review</a> | <a href="nus/MA4270 Reference.pdf">Cheatsheet</a></li>
-<li>XFC4101 Integrated Honours Thesis (year-long module) | <a href="nus/XFC4101.html">Review</a> | <a href="https://arxiv.org/abs/2106.12193">arXiv</a></li>
+<li>XFC4101 Integrated Honours Thesis (year-long module) | <a href="nus/XFC4101.html">Review</a> | <a href="https://arxiv.org/abs/2106.12193">arXiv</a> | <a href="https://doi.org/10.1109/TIT.2022.3140604">IEEE Journal Publication</a></li>
 </ul>
 
 <p class="modulegroup">AY 20/21 Sem 2</p>
@@ -410,7 +410,7 @@ scripts:
 <li>MA4261 Coding and Cryptography | <a href="nus/MA4261.html">Review</a> | <a href="nus/MA4261 Reference.pdf">Cheatsheet</a></li>
 <li>PC1144 Introduction to Modern Physics</li>
 <li>ST2132 Mathematical Statistics | <a href="nus/ST2132.html">Review</a> | <a href="nus/ST2132 Reference.pdf">Cheatsheet</a></li>
-<li>XFC4101 Integrated Honours Thesis (year-long module) | <a href="nus/XFC4101.html">Review</a> | <a href="https://arxiv.org/abs/2106.12193">arXiv</a></li>
+<li>XFC4101 Integrated Honours Thesis (year-long module) | <a href="nus/XFC4101.html">Review</a> | <a href="https://arxiv.org/abs/2106.12193">arXiv</a> | <a href="https://doi.org/10.1109/TIT.2022.3140604">IEEE Journal Publication</a></li>
 </ul>
 
 <p class="modulegroup">AY 21/22 Sem 1</p>
