Add NUS certificate links

--- a/index.html
+++ b/index.html
@@ -217,6 +217,18 @@ scripts:
 <hr/>
 
 <div>
+<p><span class="keyname">NUS Degree Certificates/Transcripts:</span></p>
+
+<p>I have graduated from my undergraduate studies at NUS, and have attained an Honours (Highest Distinction) for both computer science and applied mathematics.  The "Honours (Highest Distinction)" degree classification is awarded to students with a CAP of 4.50 and above (out of 5.00) &mdash; a criteria that I far surpass.</p>
+
+<ul>
+<li><a href="nus/BComp(CS).pdf">Bachelor of Computing with Honours (Highest Distinction) in Computer Science</a></li>
+<li><a href="nus/BSc(AM).pdf">Bachelor of Science with Honours (Highest Distinction) in Applied Mathematics</a></li>
+</ul>
+</div>
+<hr/>
+
+<div>
 <p><span class="keyname">NUS Teaching Awards:</span></p>
 
 <p>The Honor List of Student Tutors is awarded by NUS School of Computing each academic year to recognise excellence in teaching among its student tutors.  The exact criteria for this award is not known, but it is believed to be derived from the student feedback collected at the end of each semester.</p>
