Add university-level awards

--- a/index.html
+++ b/index.html
@@ -230,13 +230,39 @@ scripts:
 <hr/>
 
 <div>
-<p><span class="keyname">NUS Degree Certificates/Transcripts:</span></p>
+<p><span class="keyname">NUS Degree Certificates/Transcripts and Academic Awards:</span></p>
 
 <p>I have graduated from my undergraduate studies at NUS, and have attained an Honours (Highest Distinction) for both computer science and applied mathematics.  The "Honours (Highest Distinction)" degree classification is awarded to students with a CAP of 4.50 and above (out of 5.00) &mdash; a criteria that I far surpass.</p>
 
 <ul>
 <li><a href="nus/BComp(CS).pdf">Bachelor of Computing with Honours (Highest Distinction) in Computer Science</a></li>
 <li><a href="nus/BSc(AM).pdf">Bachelor of Science with Honours (Highest Distinction) in Applied Mathematics</a></li>
+</ul>
+
+<p>In recognition of being the top student in both computer science and mathematics, I have been awarded these awards:</p>
+
+<ul>
+<li><a href="https://credentials.nus.edu.sg/870f02a6-b37d-4900-bc8d-62987a46727f">IMDA Excellence in Computing Prize</a> &mdash; awarded to the most outstanding graduating student in the Bachelor of Computing (Computer Science, Information Systems and Information Security) Programme</li>
+<li><a href="https://credentials.nus.edu.sg/a7affc27-73eb-42d4-b6de-561a9806c5a4">Ven. Dr. D. D. Chelliah Gold Medal</a> &mdash; awarded to the best student in Mathematics</li>
+</ul>
+
+<p>The Dean's List is awarded to students in the top 5% of their cohort each semester.  Students are only eligible for the Dean's List after their freshmen year, and they must take at least two modules from their host faculty in that semester.  As a student enrolled in a double degree programme, I am eligible for either faculty's Dean's List only when I take at least two modules offered by that faculty in the same semester.</p>
+
+<p>Module coordinators may occasionally award recommendation letters to students for outstanding performance in their modules.</p>
+
+<p><a href="https://www.comp.nus.edu.sg/programmes/ug/honour/merit/">BComp (CS) Focus Area Certificates</a> are awarded to students with outstanding performance in the modules satisfying that focus area.</p>
+
+<ul>
+<li>AY 21/22 Sem 1 Dean's List for NUS Faculty of Science | <a href="https://credentials.nus.edu.sg/d5319e11-8040-4893-bd63-29b82428c2fa">Digital certificate</a></li>
+<li>AY 20/21 Sem 2 Dean's List for NUS School of Computing | <a href="https://credentials.nus.edu.sg/8cc4344a-3a95-4ccb-a24f-904986f62486">Digital certificate</a></li>
+<li>AY 20/21 Sem 2 Dean's List for NUS Faculty of Science | <a href="https://credentials.nus.edu.sg/489e9f20-223f-40e9-a850-bf156ffb4270">Digital certificate</a></li>
+<li>Certificate of Distinction in the Programming Languages Focus Area of the Bachelor of Computing in Computer Science | <a href="https://credentials.nus.edu.sg/106ae5cf-653b-4a66-abc3-58eab4f406d5">Digital certificate</a></li>
+<li>Certificate of Distinction in the Algorithms &amp; Theory Focus Area of the Bachelor of Computing in Computer Science | <a href="https://credentials.nus.edu.sg/0e7feda8-b6c6-4b7b-ba15-24941d25d74d">Digital certificate</a></li>
+<li>AY 19/20 Sem 1 Dean's List for NUS School of Computing</li>
+<li>AY 19/20 Sem 1 Dean's List for NUS Faculty of Science</li>
+<li>Recommendation Letter for CS4261</li>
+<li>AY 18/19 Sem 2 Dean's List for NUS School of Computing</li>
+<li>AY 18/19 Sem 1 Dean's List for NUS School of Computing</li>
 </ul>
 </div>
 <hr/>
@@ -309,30 +335,6 @@ scripts:
 
 <p><span class="more">Note:  NUS introduced a new module balloting system in AY 19/20 Sem 1, which significantly reduced students' incentive for providing feedback.</span></p>
 
-</div>
-<hr/>
-
-<div>
-<p><span class="keyname">NUS Academic Awards:</span></p>
-
-<p>The Dean's List is awarded to students in the top 5% of their cohort each semester.  Students are only eligible for the Dean's List after their freshmen year, and they must take at least two modules from their host faculty in that semester.  As a student enrolled in a double degree programme, I am eligible for either faculty's Dean's List only when I take at least two modules offered by that faculty in the same semester.</p>
-
-<p>Module coordinators may occasionally award recommendation letters to students for outstanding performance in their modules.</p>
-
-<p><a href="https://www.comp.nus.edu.sg/programmes/ug/honour/merit/">BComp (CS) Focus Area Certificates</a> are awarded to students with outstanding performance in the modules satisfying that focus area.</p>
-
-<ul>
-<li>AY 21/22 Sem 1 Dean's List for NUS Faculty of Science | <a href="https://credentials.nus.edu.sg/d5319e11-8040-4893-bd63-29b82428c2fa">Digital certificate</a></li>
-<li>AY 20/21 Sem 2 Dean's List for NUS School of Computing | <a href="https://credentials.nus.edu.sg/8cc4344a-3a95-4ccb-a24f-904986f62486">Digital certificate</a></li>
-<li>AY 20/21 Sem 2 Dean's List for NUS Faculty of Science | <a href="https://credentials.nus.edu.sg/489e9f20-223f-40e9-a850-bf156ffb4270">Digital certificate</a></li>
-<li>Certificate of Distinction in the Programming Languages Focus Area of the Bachelor of Computing in Computer Science | <a href="https://credentials.nus.edu.sg/106ae5cf-653b-4a66-abc3-58eab4f406d5">Digital certificate</a></li>
-<li>Certificate of Distinction in the Algorithms &amp; Theory Focus Area of the Bachelor of Computing in Computer Science | <a href="https://credentials.nus.edu.sg/0e7feda8-b6c6-4b7b-ba15-24941d25d74d">Digital certificate</a></li>
-<li>AY 19/20 Sem 1 Dean's List for NUS School of Computing</li>
-<li>AY 19/20 Sem 1 Dean's List for NUS Faculty of Science</li>
-<li>Recommendation Letter for CS4261</li>
-<li>AY 18/19 Sem 2 Dean's List for NUS School of Computing</li>
-<li>AY 18/19 Sem 1 Dean's List for NUS School of Computing</li>
-</ul>
 </div>
 <hr/>
 
