Say that I've completed my undergraduate studies

--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@ scripts:
 
 
 <div>
-<p>I am currently an undergraduate studying computer science and applied mathematics at the National University of Singapore (NUS).  This is a double degree programme, which will allow me to graduate with a Bachelor of Computing (BComp) in Computer Science, as well as a Bachelor of Science (BSc) in Applied Mathematics.  I am a recipient of the NUS Merit Scholarship.  I should graduate in November 2021.</p>
+<p>I currently work at Hudson River Trading in the core development team in Singapore, mostly using modern C++.</p>
+<p>I completed my undergraduate studies in computer science and applied mathematics at the National University of Singapore (NUS) in January 2022.  This was a double degree programme, and I graduated with a Bachelor of Computing (BComp) in Computer Science, as well as a Bachelor of Science (BSc) in Applied Mathematics.  I am a recipient of the NUS Merit Scholarship.</p>
 <p>I have participated in many algorithmic programming competitions, such as the ACM-ICPC World Finals, the International Olympiad in Informatics (IOI), and the Google Code Jam.  When opportunities arise, I continue to participate in such competitions.</p>
 <p>I also tinker with technologies and write some code during my free time.  See below for some of my personal projects.</p>
 </div>
