Add Code Jam 2022

--- a/index.html
+++ b/index.html
@@ -168,6 +168,7 @@ scripts:
 <li>
 <div class="header">Code Jam (Handle: btzy)</div>
 <ul>
+<li>432<sup>nd</sup> (round 3) in 2022</li>
 <li>338<sup>th</sup> (round 3) in 2021</li>
 <li>163<sup>th</sup> (round 3) in 2020</li>
 <li>51<sup>st</sup> (round 3) in 2019</li>
