Add countries I have visited

--- a/index.html
+++ b/index.html
@@ -465,8 +465,5 @@ scripts:
 </div>
 <hr/>
 
-<div>
-<p><span class="keyname">Personal Non-Software Projects:</span></p>
-<p>(coming soon...)</p>
-</div>
+<div class="imgbox white-preservecolors"><img src="assets/img/countries-visited.svg" width="1000" /></div>
 <hr/>
