Add NUS transcript (stripped)

--- a/index.html
+++ b/index.html
@@ -244,6 +244,7 @@ scripts:
 <p>I have graduated from my undergraduate studies at NUS, and have attained an Honours (Highest Distinction) for both computer science and applied mathematics.  The "Honours (Highest Distinction)" degree classification is awarded to students with a CAP of 4.50 and above (out of 5.00) &mdash; a criteria that I far surpass.</p>
 
 <ul>
+<li><a href="nus/Transcript.pdf">Official Transcript</a></li>
 <li><a href="nus/BComp(CS).pdf">Bachelor of Computing with Honours (Highest Distinction) in Computer Science</a></li>
 <li><a href="nus/BSc(AM).pdf">Bachelor of Science with Honours (Highest Distinction) in Applied Mathematics</a></li>
 </ul>
