Add IOI 2023 task author

--- a/index.html
+++ b/index.html
@@ -134,8 +134,17 @@ scripts:
 <hr/>
 
 <div>
-<p><span class="keyname">Other Experience:</span></p>
+<p><span class="keyname">Competitive Programming (other than being a contestant):</span></p>
 <ul class="detailedlist">
+
+<li>
+<div class="header">International Olympiad in Informatics (IOI) Task Author</div>
+<div class="content">The <a href="https://ioinformatics.org/">International Olympiad in Informatics</a> is the most prestigious algorithmic problem solving competition for high school students (i.e. those who have not enrolled in a university).  Each country sends a team of up to four students.  Tasks may be submitted by anyone, but task authors are typically contestants of past IOIs.  The scientific committee selects six tasks out of the task submissions.  Selected tasks are expected to be of a high standard.</div>
+<ul>
+<li><i>Overtaking</i> (IOI 2023) | <a href="https://ioinformatics.org/files/ioi2023problem5.pdf">Statement</a> | <a href="https://ioinformatics.org/page/ioi-2023">Test Cases and Solutions</a></li>
+</ul>
+</li>
+
 <li>
 <div class="header">National Olympiad in Informatics (NOI) Scientific Committee</div>
 <div class="date">January &ndash; March 2017</div>
@@ -144,6 +153,7 @@ scripts:
 <div class="date">January &ndash; March 2021</div>
 <div class="content">The <a href="https://noisg.comp.nus.edu.sg/noi/">National Olympiad in Informatics</a> is the main algorithmic problem solving competition for secondary school and junior college students in Singapore, modelled after the International Olympiad in Informatics.  Each year, around 200 students take part in the contest.  The scientific committee prepares and ensures quality control the tasks in the competition.  In 2017, I reviewed and tested the competition tasks.  In 2018, I designed and prepared some tasks which were eventually used in the competition.  In 2020 and 2021, I was in charge of the scientific committee, and led the team in task selection and preparation, to ensure the quality and fairness of the competition tasks.</div>
 </li>
+
 </ul>
 </div>
 <hr/>
