Add HighLoad.Fun 2023 certificate

--- a/index.html
+++ b/index.html
@@ -218,6 +218,13 @@ scripts:
 <li>Doing some problems, with the aim of creating the fastest solution for each problem I solve</li>
 </ul>
 </li>
+
+<li>
+<div class="header">HighLoad.Fun</div>
+<ul>
+<li>6<sup>th</sup> in 2023 | <a href="https://highload.fun/ratings/2023/a20ebbdba2ed5ab42886cdc2723856a8d465075674cea02889d30ebcb33984d1">Ranklist</a> | <a href="https://highload.fun/cert/2023/a20ebbdba2ed5ab42886cdc2723856a8d465075674cea02889d30ebcb33984d1">Digital Certificate</a></li>
+</ul>
+</li>
 </ul>
 </div>
 <hr/>
